# recommender-model

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mlflow.db  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
mlruns/1/7f87c5f63fb341418e983e39ea805bce/artifacts/: recommender_model.cbm
mlruns/1/b92377e15f074dceb32185d6b68fb5d0/artifacts/: recommender_model.cbm
notebooks/: recomender_custom.ipynb  recomender_example.ipynb
output/: metrics.json
src/: config.py  feature_importance_with_weights.py  generate_synthetic_data.py  predict.py  preprocessing.py  run_inference.py  run_pipeline.py  train.py  tune.py  utils.py
src/common/: config.py  monitoring.py
src/data_generation/: generator.py
src/inference/: api.py  optimizer.py  predictor.py
src/preprocessing/: processor.py
src/scripts/: feature_importance_test.py
src/training/: trainer.py
