[tool.poetry]
name = "ml-recommender-project"
version = "0.1.0"
description = "Modelo de recomendación usando CatBoost"
authors = ["Tu Nombre <tu@email.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
numpy = "^1.26"
catboost = "^1.2"
scikit-learn = "^1.3"
shap = "^0.44"
matplotlib = "^3.8"
seaborn = "^0.13"
optuna = "^3.4"
joblib = "^1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
